# content-multiagent-portfolio

./: .gitignore  README.md  compose.yaml
Content_MultiAgent/: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  app.py  pyproject.toml
Content_MultiAgent/_bmad/: config.toml  config.user.toml
Content_MultiAgent/docs/: architecture-summary.md  artifact-map.md  demo-script.md  demo-setup.md  docker.md  interview-cheatsheet.md  project-structure.md  release-checklist.md  roadmap.md  testing-strategy.md  troubleshooting.md
Content_MultiAgent/scripts/: capture_demo_screenshots.py
Content_MultiAgent/tests/: test_app_shell.py  test_architecture_boundaries.py  test_article_validation_service.py  test_article_validators.py  test_artifact_registry.py  test_artifact_store.py  test_brief_approval_service.py  test_brief_qa_service.py  test_brief_service.py  test_brief_validators.py  test_changelog_docs.py  test_ci_docs.py  test_config.py  test_debug_snapshot_service.py  test_demo_cli.py  test_demo_inputs.py  test_demo_observability.py  test_demo_pipeline_service.py  test_editorial_qa_prompt.py  test_editorial_qa_service.py  test_example_outputs.py  test_exporters.py  test_final_qa_service.py  test_interview_docs.py  test_job_history_service.py  test_job_service.py  test_live_brief_service.py  test_llm_runner.py  test_localization_service.py  test_makefile_docs.py  test_python_version_contract.py  test_readme_docs.py  test_repository_health.py  test_root_readme.py  test_run_summary_service.py  (+9 more)
(+135 files in other folders)
